# DoLT

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  README_EN.md  README_KO.md  SPEC.md  dolt.yaml.example  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/dolt/: __init__.py  __main__.py  errors.py
src/dolt/chunking/: __init__.py  base.py  hybrid_chunker.py  structure_chunker.py  token_chunker.py
src/dolt/cli/: __init__.py  app.py
src/dolt/embedding/: __init__.py  base.py  cohere_provider.py  local_provider.py  openai_provider.py
src/dolt/export/: __init__.py  base.py  json_exporter.py  pinecone_exporter.py  postgres_exporter.py  qdrant_exporter.py  weaviate_exporter.py
src/dolt/ingestion/: __init__.py  ingestor.py
src/dolt/metadata/: __init__.py  base_plugin.py  enricher.py
src/dolt/metadata/builtin/: __init__.py  basic_meta.py  section_path.py  word_count.py
src/dolt/models/: __init__.py  chunk.py  config.py  document.py  section.py
src/dolt/parsing/: __init__.py  base.py  docling_parser.py  docx_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  registry.py  text_parser.py
src/dolt/pipeline/: __init__.py  orchestrator.py
src/dolt/plugins/: __init__.py  loader.py
src/dolt/storage/: __init__.py  local_store.py
src/dolt/utils/: __init__.py  hashing.py  logging.py  tokens.py
src/dolt/web/: app.py  state.py
src/dolt/web/components/: chunk_card.py  progress_tracker.py  section_tree.py
src/dolt/web/pages/: chunk.py  dashboard.py  embed.py  export.py  ingest.py  parse.py  plugins.py  run_pipeline.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunking.py  test_cli.py  test_embedding.py  test_export.py  test_ingestion.py  test_metadata.py  test_orchestrator.py  test_parsing.py  test_plugins.py  test_storage.py  test_text_parser.py
