[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dolt"
version = "0.1.0"
description = "Document-native ELT Engine — 비정형 문서를 AI/RAG용 구조화 데이터로 변환"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "DoLT Contributors" }]
keywords = ["rag", "document", "elt", "embedding", "vector", "chunking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyMuPDF>=1.23",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "tiktoken>=0.5",
    "httpx>=0.25",
    "openai>=1.0",
    "pyyaml>=6.0",
    "docling>=2.0",
]

[project.optional-dependencies]
cohere = ["cohere>=5.0"]
local = ["sentence-transformers>=2.2"]
qdrant = ["qdrant-client>=1.7"]
pinecone = ["pinecone-client>=3.0"]
weaviate = ["weaviate-client>=4.0"]
postgres = ["psycopg2-binary>=2.9", "pgvector>=0.2"]
web = ["streamlit>=1.30"]
all = [
    "dolt[cohere,docling,local,qdrant,pinecone,weaviate,postgres,web]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
dolt = "dolt.cli.app:main"
dolt-web = "dolt.web.app:main"

[project.entry-points."dolt.parsers"]
pdf = "dolt.parsing.pdf_parser:PDFParser"
pdf_docling = "dolt.parsing.docling_parser:DoclingParser"
docx = "dolt.parsing.docx_parser:DOCXParser"
html = "dolt.parsing.html_parser:HTMLParser"
markdown = "dolt.parsing.markdown_parser:MarkdownParser"
text = "dolt.parsing.text_parser:PlainTextParser"

[project.entry-points."dolt.metadata_plugins"]
basic_meta = "dolt.metadata.builtin.basic_meta:BasicMetaPlugin"
word_count = "dolt.metadata.builtin.word_count:WordCountPlugin"
section_path = "dolt.metadata.builtin.section_path:SectionPathPlugin"

[project.entry-points."dolt.embedding_providers"]
openai = "dolt.embedding.openai_provider:OpenAIEmbeddingProvider"
cohere = "dolt.embedding.cohere_provider:CohereEmbeddingProvider"
local = "dolt.embedding.local_provider:LocalEmbeddingProvider"

[project.entry-points."dolt.exporters"]
json = "dolt.export.json_exporter:JSONExporter"
qdrant = "dolt.export.qdrant_exporter:QdrantExporter"
pinecone = "dolt.export.pinecone_exporter:PineconeExporter"
weaviate = "dolt.export.weaviate_exporter:WeaviateExporter"
postgres = "dolt.export.postgres_exporter:PostgresExporter"

[tool.hatch.build.targets.wheel]
packages = ["src/dolt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = ["dolt/web/"]

[[tool.mypy.overrides]]
module = [
    "dolt.parsing.html_parser",
    "dolt.parsing.pdf_parser",
    "dolt.parsing.docling_parser",
    "dolt.parsing.docx_parser",
    "dolt.embedding.local_provider",
    "dolt.export.weaviate_exporter",
    "dolt.export.postgres_exporter",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dolt --cov-report=term-missing"
